--- a/style.css
+++ b/style.css
@@ -137,7 +137,10 @@ h4 {
 footer {
 	background-color: #333;
 	min-height: 7vh;
-	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-top: 15px;
 	color: #fff;
 }
 
